# Orion

./: .gitignore  .pre-commit-config.yaml  README.md  dockerfile  pyproject.toml  requirements.txt  run_inference.py  run_sweep.py
OrionV2/: .gitignore  README.md  config.py  config.yaml  data_loader.py  inference.py  main.py  models.py  requirements.txt  test_case.py  training_loop.py  utils.py
notebooks/: explore_predictions.ipynb  test_inference.ipynb  test_view_classifier.ipynb
notebooks/config/: config.yaml  config_classification_swin3d.yaml  config_classification_swin3d_object_class.yaml  config_classification_swin3d_object_class_inference.yaml  config_mvit_hog_finetune_regression.yaml  config_mvit_rope_regression.yaml  config_regression_swin3d.yaml  config_resume.yaml  config_small.yaml  config_x3d_binary_classification_lvedp_train.yaml  config_x3d_binary_classification_rv.yaml  config_x3d_binary_classification_rv_train.yaml  config_x3d_multi_output_classification.yaml  config_x3d_multi_output_classification_eval.yaml  config_x3d_multi_output_classification_train.yaml  contrastive_config.yaml  infrerence_config_template.yaml  runner.sh  sweep_config.yaml
orion/: __init__.py  __version__.py
orion/datasets/: __init__.py  video.py  video_distribution.py  video_feature.py  video_inference.py
orion/models/: __init__.py  config.py  contrastive_model.py  dist_model.py  feature_model.py  movinet_model.py  pytorchvideo_models.py  videopairclassifier.py  vivit.py  x3d_legacy.py  x3d_multi.py
orion/utils/: __init__.py  arg_parser.py  dist_eval_sampler.py  losses.py  (+5 more)
(+2 files in other folders)
