[tool.poetry]
name = "orion"
version = "0.1.0"
description = ""
authors = ["Robert Avram <robert.avram.md@gmail.com>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
matplotlib = "^3.8.2"
pre-commit = "^3.6.0"
numpy = "^1.26.2"
torchmetrics = "^1.2.1"
wandb = "^0.16.1"
seaborn = "^0.13.0"
tabulate = "^0.9.0"
zarr = "^2.16.1"
stam-pytorch = "^0.0.4"
timesformer-pytorch = "^0.4.1"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
